[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lcus"
version = "0.1.0"
description = "Python control library for LCUS style USB relay boards."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "gideon_alpha", email = "gideon_alpha@gmail.com" },
]
dependencies = [ "pyserial" ]
keywords = ["library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]  # Look in the root directory
include = ["lcus*"]  # Include lcus package and subpackages
    
